# nbody

./: Cargo.toml  cpp_build.rs  test.sh
src/: global.rs  main.rs  seq.rs
src/brute_force/: mod.rs  seq_module.rs
src/geometry/: body.rs  mod.rs  shape.rs
src/mpi_eng/: mod.rs  mpi_module.rs
src/openmp/: cpp_module.rs  mod.rs
src/pthread/: mod.rs  pool.rs
src/quad_tree/: mod.rs  node.rs
src/rayon_eng/: mod.rs  rayon_module.rs
