[package]
name = "nbody"
version = "0.1.0"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"
build = "cpp_build.rs"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.9.0"
nalgebra = "0.18.1"
hashbrown = "0.6.1"
num = "0.2"
seahash = "3.0.6"
lazy_static = "1.4.0"
sdl2 = "0.32.2"
rand = "*"
cpp = "0.5.8"
cpp_common = "0.5.8"
clap = "2.33.0"
mpi = "0.6"
rayon = "1.2.0"


[build-dependencies]
cpp_build = "0.5.8"


